<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Application level strings -->
    <string name="app_name">NeverBeLate™</string>
    <string name="app_title">NeverBeLate™ Settings</string>
    <string name="app_version">App version</string>
    <string name="base_task">com.madhackerdesigns.neverbelate.base_task</string>
    <string name="version_name">1.1_build-16</string>

<!-- Admob Publisher ID -->
	<string name="admob_id">a14d952e8939105</string>
	
<!-- Strings for Launcher Activity -->
	<string name="btn_enable_text">Enable NeverBeLate™</string>
	<string name="btn_quick_tour_text">View\nQuick Tour</string>
	<string name="btn_configure_text">Configure Settings</string>
	<string name="btn_share_text">Share with a Friend</string>
	<string name="btn_video_tour_text">Watch\nVideo Tour</string>
	<string name="content_description_logo">NeverBeLate™ White Rabbit Logo</string>
	<string name="dlg_coming_soon_msg">This feature is coming soon, so be sure to check back later in the Android Market for updates!</string>
	<string name="dlg_coming_soon_title">Coming soon</string>
	<string name="dlg_qt_title">Check out the Quick Tour!</string>
	<string name="dlg_qt_msg">Would you like to view the new Quick Tour? It will help you get up and running quickly, and should answer some of the questions you may have about how to make NeverBeLate™ work for you.\n\n(NOTE: if you do not view it now, you can always get back to it from the Quick Tour button on the main screen.)</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="loading_text">Loading...</string>
	<string name="ok">OK</string>
	<string name="share_menu_title">Share NeverBeLate™</string>
	<string name="share_message">I use the new FREE app NeverBeLate™ for Android, and I am amazed how well it keeps me on-time to all of my events! It checks the locations of upcoming events in my Android calendar, and then warns me when I need to get in the car to beat the traffic. I can even use it to check the traffic between my current location and my destination. Check out NeverBeLate™ for FREE here: http://bit.ly/never-be-late</string>
	<string name="share_subject">Check out NeverBeLate™ for Android!</string>
    
<!-- Strings for Test Activity -->
    <string name="reset_ad_helper_button_text">Reset AdHelper values</string>
    <string name="reset_alert_list_button_text">Reset alert list</string>
    <string name="settings_button_text">Configure NeverBeLate™ settings</string>
    <string name="test_text">Click the button below to test the app:</string>
    <string name="test_button_text">Test NeverBeLate™ Warning System</string>
    
<!-- Strings for AlertsProvider -->
	<string name="alerts_contract_authority">com.madhackerdesigns.neverbelate.provider.AlertsContract</string>
	<string name="untitled_event">(No Title)</string>

<!-- Strings for WarningDialog -->
    <string name="advance_warning_title">NeverBeLate™ Advance Warning</string>
    <string name="away_text">away</string>
    <string name="departure_time">Departure time</string>
    <string name="dismiss_button_text">Dismiss</string>
    <string name="dismiss_all_button_text">Dismiss all</string>
    <string name="default_copyright_text">Map data from Google</string>
    <string name="default_departure_window">15 min!</string>
    <string name="default_event_location">P. Sherman, 42 Wallaby Way, Sidney</string>
    <string name="default_event_time">2:00pm - 3:00pm</string>
    <string name="default_event_title">Default Event Title</string>
    <string name="default_travel_time">25 min\naway</string>
    <string name="maps_data">Maps data</string>
    <string name="minutes_early">minutes early</string>
    <string name="on_time">on time</string>
    <string name="snooze_button_text">Snooze</string>
    <string name="snooze_all_button_text">Snooze all</string>
    <string name="traffic_button_text">Click to View\nCurrent Traffic</string>
    <string name="unit_minutes">min</string>
    <string name="warning_text">To arrive at your next event on time, you must leave...</string>
    
<!-- Strings for notifications -->
    <string name="content_title">NeverBeLate™ |</string>
    <string name="content_text">Click for traffic/event details!</string>
    <string name="more_text">more</string>
    <string name="ticker_text">You must leave soon to arrive on time at your next event!</string>
  
<!-- NeverBeLateSettings -->
	<string name="feedback_address">mail@madhackerdesigns.com</string>
	<string name="feedback_menu_title">Choose email app</string>
	<string name="feedback_subject">[NeverBeLate™] - Feedback Case #</string>
	<string name="privacy_title">Privacy policy</string>
	<string name="send_feedback">Click here to send me an email with feedback, questions, or bugs you have encountered.</string>
	<string name="send_feedback_title">Send feedback</string>
	<string name="settings_instructions">Each setting below has a recommended value to balance battery life with performance, but feel free to change them to fit your schedule needs and transportation style.</string>
    <string name="settings_instructions_title">Instructions</string>
    <string name="website_title">Developer website</string>
    
    <string-array name="freq_entries_15">
<!--     	<item>1 minute (dev only)</item> -->
    	<item>5 minutes</item>
    	<item>10 minutes</item>
    	<item>15 minutes (recommended)</item>
    	<item>30 minutes</item>
    	<item>60 minutes</item>
    </string-array>
    <string-array name="freq_entries_5">
<!--     	<item>1 minute (dev only)</item> -->
    	<item>5 minutes (recommended)</item>
    	<item>10 minutes</item>
    	<item>15 minutes</item>
    	<item>30 minutes</item>
    	<item>60 minutes</item>
    </string-array>
    <string-array name="freq_values">
<!--     	<item>60000</item> -->
    	<item>300000</item>
    	<item>600000</item>
    	<item>900000</item>
    	<item>1800000</item>
    	<item>3600000</item>
    </string-array>
    <string name="default_location_freq">300000</string>
    <string name="default_traveltime_freq">900000</string>
    <string name="default_advance_warning">900000</string>
        
    <string-array name="lookahead_entries">
    	<item>1 hour</item>
    	<item>2 hours (default)</item>
    	<item>3 hours</item>
    	<item>6 hours</item>
    	<item>12 hours</item>
    </string-array>
    <string-array name="lookahead_values">
    	<item>3600000</item>
    	<item>7200000</item>
    	<item>10800000</item>
    	<item>21600000</item>
    	<item>43200000</item>
    </string-array>
    <string name="default_lookahead_window">7200000</string>
        
    <string-array name="travel_mode_entries">
    	<item>Driving (default)</item>
    	<item>Walking</item>
    	<item>Bicycling</item>
    </string-array>
    <string-array name="travel_mode_values">
    	<item>driving</item>
    	<item>walking</item>
    	<item>bicycling</item>
    </string-array>
    <string name="default_travel_mode">driving</string>
    
    <string-array name="notify_entries">
    	<item>Alert dialog (default)</item>
    	<item>Status bar notification</item>
    </string-array>
    <string-array name="notify_values">
    	<item>ALERT</item>
    	<item>STATUS_BAR_ONLY</item>
    </string-array>
    <string name="default_notification_method">ALERT</string>
    
    <string-array name="snooze_entries">
<!--     	<item>1 minute (dev only)</item> -->
    	<item>5 minutes (recommended)</item>
    	<item>10 minutes</item>
    	<item>15 minutes</item>
    	<item>30 minutes</item>
    	<item>60 minutes</item>
    </string-array>
    <string-array name="snooze_values">
<!--     	<item>60000</item> -->
    	<item>300000</item>
    	<item>600000</item>
    	<item>900000</item>
    	<item>1800000</item>
    	<item>3600000</item>
    </string-array>
    <string name="default_snooze_duration">300000</string>
</resources>
