<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--> 

<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:gravity="center_vertical"
    android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:minHeight="?android:attr/listPreferredItemHeight"
	android:orientation="horizontal" >

	<View android:id="@+id/vertical_stripe"
		android:layout_width="10dip"
	    android:layout_height="fill_parent"
	    android:layout_marginRight="5dip" /> 
	
			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" >	
				
				<TextView
					android:gravity="right"
					android:id="@+id/travel_time"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:paddingLeft="7dip"
					android:paddingRight="7dip"
					android:text="@string/default_travel_time"
					android:textColor="@color/red_dark"
					android:textSize="18sp"
					android:textStyle="bold"  />
				<View
					android:background="@color/grey_light"
					android:id="@+id/vertical_separator"
					android:layout_centerVertical="true"
					android:layout_height="45dip"
					android:layout_marginBottom="5dip"
					android:layout_marginLeft="5dip"
					android:layout_marginTop="5dip"
					android:layout_toLeftOf="@id/travel_time"
					android:layout_width="1dip"  />
				<TextView
					android:ellipsize="end"
					android:id="@+id/event_title"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/vertical_separator"
					android:layout_width="wrap_content"
					android:paddingTop="5dip"
					android:singleLine="true"
					android:text="@string/default_event_title"
					android:textStyle="bold"
		            android:textColor="@android:color/black"
		            style="?android:attr/textAppearanceMediumInverse" />
				<TextView
					android:ellipsize="end"
					android:id="@+id/event_time"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/event_title"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/vertical_separator"
					android:layout_width="wrap_content"
					android:singleLine="true"
					android:text="@string/default_event_time"
					android:textStyle="bold"
                    style="?android:attr/textAppearanceSmallInverse"  />
				<TextView
					android:ellipsize="end"
					android:gravity="bottom"
					android:id="@+id/event_location"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/event_time"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/vertical_separator"
					android:layout_width="wrap_content"
					android:paddingBottom="5dip"
					android:singleLine="true"
					android:text="@string/default_event_location"
					style="?android:attr/textAppearanceSmallInverse"  />
				
			</RelativeLayout>
			
</LinearLayout>